--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-215.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.96MB/s(Youtube:不良林), server: 5.183.176.80, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇮🇳 印度-1.15MB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.80MB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-606.1KB/s(Youtube:不良林), server: 89.31.126.171, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-458.0KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 波兰-1.39MB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.96MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-606.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
