--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.28MB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-1.04MB/s(Youtube:不良林), server: 217.30.10.67, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇭🇰 香港-2.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 185.172.113.106, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-646.8KB/s(Youtube:不良林), server: 89.31.126.171, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-11.54MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
