--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 185.172.113.106, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-646.8KB/s(Youtube:不良林), server: 89.31.126.171, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-11.54MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-477.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-215.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 194.156.231.223, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇯🇵 日本-902.5KB/s(Youtube:不良林), server: 194.156.231.223, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-646.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
